--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "gatsby": "^1.9.250",
+    "gatsby-image": "^1.0.48",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-react-helmet": "^2.0.10",
+    "gatsby-plugin-sharp": "^1.6.44",
+    "gatsby-source-filesystem": "^1.5.35",
+    "gatsby-transformer-sharp": "^1.6.24",
     "normalize.css": "^7.0.0",
     "react-helmet": "^5.2.0"
   },
