--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-image": "^1.0.48",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-favicon": "^2.1.1",
+    "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-sharp": "^1.6.44",
     "gatsby-source-filesystem": "^1.5.35",
