--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "slug": "^1.0.0"
   },
   "devDependencies": {
+    "gatsby-plugin-remove-trailing-slashes": "^2.1.0",
     "svg-react-loader": "^0.4.6"
   }
 }
